@@ -8,21 +8,13 @@ import static org.pepsoft.minecraft.Material.AGE;
 /**
  * A simple one-block plant with an {@code age} property.
  */
-class AgingPlant extends SimplePlant {
+class AgingPlant extends PlantWithGrowth {
     AgingPlant(String name, Material material, String iconName, int maxGrowth, Category... category) {
-        super(name, material, iconName, category);
-        this.maxGrowth = maxGrowth;
-    }
-
-    @Override
-    public int getMaxGrowth() {
-        return maxGrowth;
+        super(name, material, iconName, maxGrowth, category);
     }
 
     @Override
     public Plant realise(int growth, Platform platform) {
         return new SimplePlant(name, material.withProperty(AGE, growth - 1), iconName, categories);
     }
-
-    protected final int maxGrowth;
 }
