@@ -1,5 +1,6 @@
 -- Version 2.15.19, released ...
 
+ * Bug fix: make pumpkin and melon stems from Custom Plants Layers export with the correct ages
  * Various bug fixes
 
 -- Version 2.15.18, released 4-1-2023
